--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,27 @@
   box-sizing: border-box;
 }
 
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+
+  input, button {
+    font-size: 100%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+    font-size: 80%;
+  }
+
+  html, input, button {
+    font-size: 87.5%;
+  }
+}
+
 html, body, #root {
   height: 100%;
 }
@@ -32,6 +53,12 @@ a svg:hover {
 main {
   padding: 32px;
   text-align: center;
+}
+
+@media (max-width: 720px) {
+  main {
+    padding: 16px;
+  }
 }
 
 .Toastify__toast-body {
