--- a/src/pages/Post/style.css
+++ b/src/pages/Post/style.css
@@ -2,6 +2,8 @@ main#post {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+
   justify-content: center;
 }
 
@@ -9,6 +11,7 @@ article {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+
   justify-content: space-around;
   max-width: 1152px;
 
@@ -26,6 +29,8 @@ article img {
 article section {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+
   _flex: 3;
   min-width: 420px;
   align-items: baseline;
@@ -72,4 +77,30 @@ article a div {
 article a svg {
   width: 16px;
   height: 16px;
+}
+
+@media (max-width: 720px) {
+  #post h2, #post a {
+    word-wrap: break-word;
+    _background-color: #ccc;
+  }
+
+  aside, article, article section {
+    flex-wrap: wrap;
+    min-width: 100%;
+    max-width: 100%;
+  }
+
+  aside {
+    _border: 1px solid #27242f;
+  }
+
+  article {
+    _border: 1px solid #27242f;
+  }
+
+  section {
+    _border: 1px solid #27242f;
+    overflow: hidden;
+  }
 }
