--- a/src/pages/Post/style.css
+++ b/src/pages/Post/style.css
@@ -81,6 +81,11 @@ article a svg {
   height: 16px;
 }
 
+article a p {
+  flex: 1;
+  width: calc(100% - 40px);
+}
+
 @media (max-width: 720px) {
   #post h2, #post a {
     word-wrap: break-word;
